# MinimumViablePerseus

./: .gitignore  .gitmodules  .tool-versions  Chunking-Design.org  Coding-Standards.org  Home.md  Object-Model.org  P4-Analysis.org  P4-Functional-Analysis.org  README.md  README.org  Roadmap.org  defaultenv  pyproject.toml
.claude/: CHUNKING_DESIGN.md  CLAUDE.md
.claude/guidelines/: documentation.md  python.md
.github/ISSUE_TEMPLATE/: feature_request.md
docs/: design.org  forum.org  greek-annotation-summary.tsv  latin-annotation-summary.tsv  odd-proposal.org
schemas/: perseus_base.odd  tei_bare.odd
src/morph-server/: main.py
src/perseus/compilers/: compiler.py
src/perseus6/: xml.py
src/perseus6/xslt/: drama.xslt
src/python/: compilers.py  corpus.py  document.py  main.py  models.py  pipeline.py  run_annotation_pipeline.py  run_tokenize.py  site_map.py  strategy.py  tei_citation_pipeline.py
src/python/compilers/: compiler.py
src/python/mvp/: __init__.py  compilers.py  corpus.py  document.py  linters.py  models.py  pipeline.py  site_map.py  strategy.py
src/python/utils/: greek_linter.py  lint.py  tei_linter.py
src/tools/: run_add_xml_ids.py  run_build.py  run_local.py  setup_morph_data.py
src/xslt/: add_xml_ids.xsl  aristotle.xsl  chunker_core.xsl  fix_milestones_and_subchapters.xsl  generate_chunks.xsl  generate_div_chunks.xsl  tokenize.xsl  variables.xsl
src/xslt/html/: driver.xsl
src/xslt/html/tei/: core.xsl  textstructure.xsl
tests/: conftest.py  test_compilers.py  test_corpus.py  test_linter.py  test_pipeline.py  test_site_map.py  test_strategy.py  test_tei_document.py
tests/data/: dtd_entity_test.xml  my-argonautica-grc.xml  my-poetics-eng.xml  my-poetics-grc.xml  tlg0001.tlg001.perseus-grc2.xml  tlg0057.tlg069.1st1K-grc1.xml
xslt/: generate_chunks.xsl  tei-to-html-base.xsl
