[project]
name = "mvp"
version = "0.1.0"
description = "Minimum Viable Perseus — static site compiler for the Perseus Digital Library"
authors = [
    {name = "Cliff Wulfman", email = "cwulfman@princeton.edu"},
    {name = "Charles Pletcher", email = "charles.pletcher@gmail.com"}
]
dependencies = ["lxml>=6.0.2", "lxml-stubs>=0.5.1", "saxonche>=12.9.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src/python"
editable-backend = "path"


[tool.pdm.scripts]
test = "python -m pytest"
test_verbose = "python -m pytest -v"
cov = "python -m pytest --cov=src/python --cov-report=html"
cov_report = {shell = "python -m http.server -d htmlcov"}
lint = "python -m ruff check"
typecheck = "python -m mypy src/python"


[tool.pytest.ini_options]
pythonpath = ["src/python"]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src/python --cov-report=term-missing"

[tool.coverage.run]
source = ["src/python"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.3",
    "mypy>=1.15.0",
]
